--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,1 +1,6 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+/*# sourceMappingURL=style.css.map */
